fix bookmark list items not being aligned

--- a/src/app/styl/views/favorite_browser/favorite_list.styl
+++ b/src/app/styl/views/favorite_browser/favorite_list.styl
@@ -51,6 +51,7 @@
 	display: inline-block;
 	margin: 10px
 	float: left
+	width: 134px
 	font-size: 0.8em
 
 	.cover
